# SpecLog

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish-python-package2pypi.yml  python-publish.yml
SpecLog/: SpecLog.py  SpecLogger.py  __init__.py  device.py  monitor.py  run_logger.pyw  run_monitor.pyw
manual/: Spectrometer Logger Manual_20230816.docx
pyB12LOG/: __init__.py  debugLog.py  device.py  general.py  logger.py  loggerConfig.py  monitor.py  plotter.py  pyB12LOG.py  pyB12logger.py  run_logger.py  run_logger.pyw  run_plotter.py  stop_logger.pyw  test.cfg  test.py  test3.py  test4.py  test_log_file.py  test_pyvisa.py
pyB12LOG/config/: config.cfg  config.py  serial.cfg
pyB12LOG/devices/: general.py
pyB12LOG/log/: pyB12LOG.py
pyB12LOG/log/config/: config.py  log.cfg
pyB12LOG/log/devices/: devices_dictionary.py  general.py
pyB12LOG/logger/: pyB12LOG.py
pyB12LOG/logs/: 2023_RIGOL TECHNOLOGIES,DP821A,DP8E165350191,00.01.13.csv  2023_RIGOL TECHNOLOGIES_DP821A.csv
pyB12LOG/plotter/: plotter.py
pyLOG/: pylogger.py
pyLOG/config/: config.cfg
ui/: plotting.ui
